maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:69: error: ')' expected but ';' found.
		case _ => test(BiscuitX(); BiscuitY());
                                         ^JediEscaper:69: error: ';' expected but ')' found.
		case _ => test(BiscuitX(); BiscuitY());
                                                     ^